add orgin link in article

--- a/公司中的“死海效应”.md
+++ b/公司中的“死海效应”.md
@@ -3,13 +3,14 @@
 标签（空格分隔）： 公司组织
 
 ---
-
+原文作者是一位IT咨询专家
 有许多问题困扰着大公司和组织的IT部门，最常见的一个是，他们希望能够发现并雇佣最优秀的人才。但问题是，即使找到了这样的人，能留得住这样的人才吗？
 据我观察，不少公司和组织中存在一种反常的模式，我把这种模式称为“死海效应”。死海位于以色列和约旦之间，水平面低于海平面，约旦河的水汇入死海，水分的流失完全靠蒸发，经过极漫长时间的演化，死海的盐分含量远高于正常海水（大约是普通海水的八倍），平时死海不能维持正常生物的生存，只有在春季洪水流入时，暂时降低海水盐分，才有些生物能够存活。
 许多大公司/政府部门的IT部门的运行模式和死海差不多，管理层认为需要招人，就招进来新人，这些新人的资质差异极大，这取决于招聘时的目标、预算、招聘部门和负责招聘的人的水平等等因素。随着新人的不断加入，最终IT部门人员的能力应该达到一个相近的水准。
 事实并不是这样的，实际上，更有能力的工程师是那些最可能要离职的家伙－－就像死海的蒸发一样离开，只要他们愿意。这些人对公司内愚蠢的行为的容忍度不高，他们也容易找到好工作。留下来的就是“渣“－－能力不那么出众的家伙。这些人倾向于留着不走，他们也不太好找工作，并且不断构建自己的护城河，方式往往是成为关键系统的维护专家，承担没人愿意干的活，以至于公司难以承受解雇这人的代价。
 大公司里面经常发生这样的事情，并且“死海效应”还会自我强化，最终整个部门的水平变得非常差。
+原文链接：
+[The Wetware Crisis: the Dead Sea effect][1]
 
 
-
-
+  [1]: http://brucefwebster.com/2008/04/11/the-wetware-crisis-the-dead-sea-effect/
